traffic-M/dr.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: app-tier-dr
  namespace: app-tier
spec:
  host: app-tier-svc.app-tier.svc.cluster.local
  subsets:
  - name: v1
    labels:
      version: v1
