traffic-M/sc-test-tier.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Sidecar
metadata:
  name: sc-test-tier
  namespace: test-tier
spec:
  egress:
  - hosts:
    - "web-tier/*"
