traffic-M/vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: app-tier-vs
  namespace: app-tier
spec:
  hosts:
  - app-tier-svc.app-tier.svc.cluster.local
  http:
  - route:
    - destination:
        host: app-tier-svc.app-tier.svc.cluster.local
        subset: v1
